# scoop

./: .gitignore  README.md  index.html  scoop_sensor_display.py
boards/phettl-dev/: README.md  ato.yaml  diode.toml  phettl-dev.ato
boards/phettl-dev/diodelib/connectors/headers/: ato.yaml  diode.toml
boards/phettl-dev/diodelib/connectors/headers/elec/src/: headers.ato
boards/phettl-dev/diodelib/modules/xiao/: ato.yaml  xiao.ato
boards/phettl-dev/diodelib/modules/xiao/elec/footprints/xiao/: XIAO-nRF52840-Sense-14P-2.54-21X17.8MM.kicad_mod
boards/phettl-dev/diodelib/parts/max30102efd+t/: diode.toml
boards/phettl-dev/diodelib/parts/max30102efd+t/elec/layout/default/: max30102efd+t.kicad_pcb  tmp116aidrvr.kicad_pro  tps7a0518pdbvr.kicad_pro
boards/phettl-dev/diodelib/parts/max30208clb/: README.md  ato.yaml  max30208clb.ato
boards/phettl-dev/diodelib/parts/max30208clb/elec/footprints/max30208clb/: IC_MAX30208CLB.kicad_mod  MAX30208CLB+T.kicad_sym  MAX30208CLB.kicad_sym
boards/phettl-dev/diodelib/parts/max30208clb/elec/layout/default/: max30208clb.kicad_pcb  max30208clb.kicad_pro
boards/phettl-dev/diodelib/parts/tmp116aidrvr/: ato.yaml  diode.toml  tmp116aidrvr.ato
boards/phettl-dev/diodelib/parts/tmp116aidrvr/elec/layout/default/: max30102efd+t.kicad_pro
boards/phettl-dev/diodelib/parts/tps7a0518pdbvr/elec/footprints/tps7a0518pdbvr/: DBV0005A_N.kicad_mod
boards/phettl-dev/diodelib/parts/tps7a0518pdbvr/elec/layout/default/: tps7a0518pdbvr.kicad_pcb
boards/phettl-dev/diodelib/pcb/hm-nfc-class6/: README.md  ato.yaml  hm-nfc-class6.ato
boards/phettl-dev/elec/layout/default/: phettl-dev.kicad_pcb
boards/phettl-dev/firmware/test/: Cargo.toml  README.md  build.rs  memory.x
boards/phettl-dev/firmware/test/src/: main.rs
boards/phettl-dev/firmware/test/tools/: uf2
boards/scoop-dev/: ato.yaml  scoop-dev.ato
boards/scoop-dev/diodelib/connectors/headers/: create.sh
boards/scoop-dev/diodelib/modules/xiao/: diode.toml
boards/scoop-dev/diodelib/modules/xiao/elec/layout/default/: xiao.kicad_pcb
boards/scoop-dev/diodelib/parts/max30102efd+t/: README.md  ato.yaml  max30102efd+t.ato
boards/scoop-dev/diodelib/parts/tmp116aidrvr/: README.md
boards/scoop-dev/diodelib/parts/tps7a0518pdbvr/: README.md  ato.yaml  diode.toml  tps7a0518pdbvr.ato
boards/scoop-dev/elec/layout/default/: scoop-dev.kicad_pro
boards/scoop-dev/firmware/test/: Cargo.toml  Embed.toml  README.md  flash.uf2  memory.x
boards/scoop-dev/firmware/test/.cargo/: config.toml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
(+13 files in other folders)
