[package]
default-run = "nrf"
edition = "2021"
name = "nrf"
version = "0.1.0"

[features]
ble-sec = ["nrf-softdevice/ble-sec"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-l2cap = ["nrf-softdevice/ble-l2cap"]
default = [ "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-sec"]

[dependencies]
embedded-io = "0.6.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-4096", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"], optional = true }
embassy-nrf = { version = "0.2.0", features = [ "defmt", "nrf52840", "gpiote", "time-driver-rtc1", "unstable-pac"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = [ "defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }

nrf-softdevice = { version = "0.1.0", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
nrf-softdevice-s140 = { version = "0.1.1" }

embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
atomic-pool = "1.0.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4.1"
fixed = "1.2.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", default-features = false }
static_cell = "2.1.0"
usbd-hid = "0.8.2"
